--- a/index.html
+++ b/index.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kod → PDF Dönüştürücü</title>
-<style>
-  body {
-    font-family: "Courier New", monospace;
-    background: #f9f9f9;
-    color: #222;
-    padding: 30px;
-    margin: 0;
-  }
-  pre {
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    background: #fff;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    padding: 20px;
-    font-size: 13px;
-    overflow-x: auto;
-  }
-  h1 {
-    text-align: center;
-    font-size: 20px;
-    color: #444;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PDF Oluşturucu</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    textarea {
+      width: 100%;
+      height: 400px;
+      font-family: monospace;
+      font-size: 13px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      resize: vertical;
+    }
+    button {
+      display: block;
+      margin: 20px auto;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <h1>📄 Kod PDF Dönüştürücü</h1>
-  <pre>
-  <!-- 🔽 BURAYA KODUNU YAPIŞTIR 🔽 -->
-  
-  // örnek:
-  function hello() {
-      console.log("Hello, world!");
-  }
+  <h1>📄 Koddan PDF Oluştur</h1>
+  <textarea id="codeInput" placeholder="Buraya 2000–3000 satırlık kodunu yapıştır..."></textarea>
+  <button onclick="generatePDF()">PDF Oluştur</button>
 
-  <!-- 🔼 BURAYA KADAR 🔼 -->
-  </pre>
+  <script>
+    async function generatePDF() {
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF({ orientation: 'p', unit: 'pt', format: 'a4' });
+
+      const code = document.getElementById("codeInput").value;
+      const lines = code.split('\n');
+      const pageHeight = pdf.internal.pageSize.height;
+      const lineHeight = 14;
+      let y = 40;
+
+      pdf.setFont("courier", "normal");
+      pdf.setFontSize(10);
+
+      for (let i = 0; i < lines.length; i++) {
+        if (y > pageHeight - 40) {
+          pdf.addPage();
+          y = 40;
+        }
+        pdf.text(lines[i], 30, y);
+        y += lineHeight;
+      }
+
+      pdf.save("kod.pdf");
+    }
+  </script>
 </body>
 </html>
